# aieye

./: .gitignore  README.ko.md  README.md  build.sh  package.json
Distribution/: README.md  Release.sh
Distribution/HomebrewTap/: aieye.rb
docs/: README.md
docs/adr/: ADR-0001-tauri-v2-react.md  ADR-0002-adapter-pattern.md
docs/guides/: github-discoverability.md
docs/plans/: 2026-04-18-plan-1-skeleton-claude-adapter.md  2026-04-18-plan-2-codex-resume.md
docs/specs/: 2026-04-18-v0.1-design.md
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  macos_panel.rs  main.rs  tray.rs  tray_icons.rs  tray_state.rs
src-tauri/src/parser/: activity.rs  claude_jsonl.rs  codex_jsonl.rs  mod.rs  preview.rs  project_slug.rs
src-tauri/src/resume/: command.rs  mod.rs  running.rs  terminal.rs
src-tauri/src/sessions/: adapter.rs  claude.rs  codex.rs  coordinator.rs  mod.rs  model.rs
src-tauri/src/settings/: mod.rs  model.rs
src-tauri/tests/fixtures/: sample-claude.jsonl  sample-codex.jsonl
src/components/: ConfirmDialog.tsx  ManageBar.tsx  PreviewPane.tsx  SessionList.tsx  SessionRow.tsx  SettingsMenu.tsx
src/hooks/: useSessions.ts  useSettings.ts
src/ipc/: tauri.ts
src/types/: session.ts  settings.ts
